# multi-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  log4rs.yaml
src/: gui.rs  hotkey.rs  hotkey_manager.rs  main.rs  utils.rs  window_manager.rs  workspace.rs
