[package]
name = "multi-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.30.0"
winit = "0.30.7"
once_cell = "1.17"
