[package]
name = "multi-manager"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[package.metadata.windows]
windows-subsystem = "windows"

[package.metadata.winres]
icon = "resources/app_icon.ico"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.30.0"
winit = "0.30.8"
once_cell = "1.17"
log = "0.4"
env_logger = "0.11.6"
log4rs = "1.2"
poll-promise = "0.3.0"
regex = "1.11.1"
image = "0.25.5"

[profile.release]
opt-level = 0
debug = true
